--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -783,9 +783,9 @@ a_5\} \in \maj{s_5}$ do not intersect. Thus the majority subsets of $s_3$ and
 $s_4$ are sufficiently similar to be consecutive memberships, but those of
 $s_3$ and $s_5$ are not.
 
-The intuition that $Q_{e-1} \frown Q_e$ means that $Q_{e-1}$ and $Q_e$ are
-similar breaks down if either membership is empty, because $\varnothing \frown
-Q$ vacuously for all memberships $Q$. Clearly if there is an instance $i$ such
+The intuition that $Q_{e-1} \frown Q_e$ captures that $Q_{e-1}$ and $Q_e$ are
+similar breaks down if either is empty, because $\varnothing \frown Q$
+vacuously for all memberships $Q$. Clearly if there is an instance $i$ such
 that $Q_{e(i)} = \varnothing$ then no value can ever be chosen for $i$, but
 epochs may be skipped by letting $e(i) = e(i-1) + 2$ at some instance $i$.
 This recovers the ability to perform arbitrary membership changes as in Dynamic
